--- a/src/views/home/navigation.less
+++ b/src/views/home/navigation.less
@@ -128,6 +128,7 @@
     .c-lf {
       width: 252px;
       padding-top: 10px;
+      .clear-scroll;
 
       // 列表图标
       .main-list {
@@ -928,7 +929,7 @@
 
           &>li {
             .in-block;
-            padding-right: 10px;
+            padding-right: 8px;
             color: #1c4b77;
             line-height: 40px;
             .relative;
@@ -942,15 +943,15 @@
               .absolute;
               background: rgba(3, 25, 46, .8);
               color: #fff;
-              width: 70px;
               .tx-ct;
               top: 40px;
               left: 0;
               z-index: 99;
+              width: 130px;
               .cspn;
 
               li {
-                line-height: 35px;
+                padding: 0 10px;
               }
             }
           }
