增加直播室页面

--- a/src/views/home/navigation.less
+++ b/src/views/home/navigation.less
@@ -16,6 +16,7 @@
 
 .navigation {
   .contain-body;
+  height: calc(100% - 128px);
 
   .video-spring-window{
     .absolute;
@@ -122,13 +123,13 @@
   }
 
   .content {
-    height: 778px;
-    overflow: hidden;
+    height: calc(100% - 30px);
 
     .c-lf {
       width: 252px;
-      padding-top: 10px;
       .clear-scroll;
+      padding-top: 10px;
+      padding-bottom: 10px;
 
       // 列表图标
       .main-list {
