赛事左侧栏页面抽离出成单独模块。 增加直播栏中英版页面 路由增加

--- a/src/views/streamline/index.less
+++ b/src/views/streamline/index.less
@@ -9,10 +9,11 @@
     margin-bottom: 8px;
     height: 60px;
 
-    img {
-      margin-left: 5%;
-      display: block;
+    &>img {
+      margin-left: 10px;
+      .in-block;
       padding-top: 10px;
+      margin-right: 20px;
     }
   }
 
