--- a/src/views/anchor/index.less
+++ b/src/views/anchor/index.less
@@ -158,7 +158,7 @@
         .cutover{
             .absolute;
             right: 50px;
-            top: 50px;
+            top: 12%;
             .cspn;
         }
         .play-top {
@@ -467,7 +467,7 @@
       }
 
       .content-2 {
-        height: calc(100% - 210px);
+        height: 100%;
 
         .title {
           cursor: pointer;
