--- a/src/views/streamline/studio.less
+++ b/src/views/streamline/studio.less
@@ -108,6 +108,11 @@
           line-height: 65px;
           .tx-ct;
 
+          &.active{
+            background: url('../../images/streamline/betActive.png') no-repeat center center;
+            background-position: 100% 100%;
+          }
+
           &::before {
             content: '';
             width: 40px;
